--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudflare": "^2.9.1",
     "config.json": "^0.0.4",
     "discord-html-transcripts": "^2.2.7",
+    "discord-logs": "^2.0.1",
     "discord-modals": "^1.3.9",
     "discord-purger": "^1.0.2",
     "discord-together": "^1.3.3",
