--- a/config.json
+++ b/config.json
@@ -9,6 +9,9 @@
     },
     "roles": ["1004107626377904229", "1004108479969103965"]
   },
+  "codex4": {
+    "reg": "1032297567230382121"
+  },
   "leave": {
     "channel": "1004104876516704387"
   },
