--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "discord-html-transcripts": "^2.2.7",
     "discord-logs": "^2.0.1",
     "discord-modals": "^1.3.9",
@@ -18,8 +19,10 @@
     "discord-webhook-node": "^1.1.8",
     "discord.js": "^13.8.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.2",
     "glob": "^7.2.0",
     "ms": "^2.1.3",
+    "nodemon": "^2.0.20",
     "nuggies": "^3.1.3",
     "quick.db": "^7.1.3",
     "undici": "^5.2.0"
