--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "discord-html-transcripts": "^2.2.7",
     "discord-logs": "^2.0.1",
     "discord-modals": "^1.3.9",
