--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ms": "^2.1.3",
     "nodemon": "^2.0.20",
     "nuggies": "^3.1.3",
+    "promise-mysql": "^5.2.0",
     "quick.db": "^7.1.3",
     "undici": "^5.2.0"
   },
